<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GameActivity"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:src="@drawable/youtube"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/answer"
        />
    <EditText
        android:id="@+id/answerInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgpurple"
        android:textSize="22sp"
        android:text="@string/submit"
        android:foreground="@drawable/ripple_effect"/>

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgpurple"
        android:textSize="22sp"
        android:text="@string/skip"
        android:foreground="@drawable/ripple_effect"/>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textAlignment="textEnd"
        android:text="@string/score_0"
        android:gravity="end" />



</LinearLayout>